SERVER-68199 Rename collection must check for index builds on the target collection before specially dropping indexes with names that are too long